@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-08-13T01:15:08Z",
+  "timestamp" : "2022-08-13T08:18:39Z",
   "count_outdated" : 450,
   "uniques_outdated" : 258,
-  "count" : 489,
+  "count" : 488,
   "uniques" : 282,
   "clones" : [
     {
       "timestamp": "2022-07-30T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
