@@ -1,10 +1,10 @@
 {
-  "count": 39,
+  "count": 38,
   "uniques": 13,
   "clones": [
     {
       "timestamp": "2022-07-30T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 2
     },
     {
