@@ -1,3 +1,10 @@
+2022-08-13T08:18:39Z:
+* notice: last 14d: unq all: 13 38
+* notice: prev accum: outdated-unq outdated-all / unq all: 258 450 / 282 489
+* notice: next accum: outdated-unq outdated-all / unq all: 258 450 / 282 488
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +2 +3 -0 -1 / 2 2
+* notice: removed / changed dates: [] / [2022-07-30]
+
 2022-08-13T01:15:08Z:
 * notice: last 14d: unq all: 13 39
 * notice: prev accum: outdated-unq outdated-all / unq all: 257 447 / 282 487
